@@ -1,24 +1,31 @@
 package com.group4.library.service;
 
+import com.group4.library.dto.PagedReaderResponse;
 import com.group4.library.dto.ReaderRequest;
 import com.group4.library.dto.ReaderResponse;
+import com.group4.library.dto.ReaderSearchRequest;
 import com.group4.library.exception.BusinessException;
-import com.group4.library.exception.ResourceNotFoundException;
-import com.group4.library.model.LecturerReader;
-import com.group4.library.model.PriorityStudentReader;
+import com.group4.library.exception.DuplicateReaderIdException;
+import com.group4.library.exception.ReaderNotFoundException;
+import com.group4.library.mapper.ReaderMapper;
 import com.group4.library.model.Reader;
-import com.group4.library.model.StudentReader;
-import com.group4.library.repository.ReaderRepository;
-import com.group4.library.utils.IdGenerator;
-import org.springframework.stereotype.Service;
 import com.group4.library.model.TicketStatus;
 import com.group4.library.repository.BorrowTicketRepository;
+import com.group4.library.repository.ReaderRepository;
+import com.group4.library.utils.IdGenerator;
+import com.group4.library.validation.ReaderValidator;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 public class ReaderService {
+
+    private static final Logger log = LoggerFactory.getLogger(ReaderService.class);
 
     private final ReaderRepository readerRepository;
     private final BorrowTicketRepository borrowTicketRepository;
@@ -31,44 +38,64 @@ public class ReaderService {
         this.borrowTicketRepository = borrowTicketRepository;
     }
 
-    public List<ReaderResponse> getAll(String keyword, String type) {
-        return readerRepository.findAll().stream()
-                .filter(r -> keyword == null || keyword.isBlank()
-                        || r.getName().toLowerCase().contains(keyword.toLowerCase())
-                        || r.getId().equalsIgnoreCase(keyword))
-                .filter(r -> type == null || type.isBlank() || r.getType().name().equals(type))
-                .map(this::toResponse)
+    public PagedReaderResponse<ReaderResponse> search(ReaderSearchRequest request) {
+        List<Reader> filtered = readerRepository.findAll().stream()
+                .filter(reader -> matchesKeyword(reader, request.getKeyword()))
+                .filter(reader -> matchesType(reader, request.getType()))
+                .sorted(buildComparator(request.getSortBy(), request.getSortDirection()))
                 .collect(Collectors.toList());
+
+        long totalElements = filtered.size();
+
+        List<ReaderResponse> pageContent = filtered.stream()
+                .skip((long) request.getPage() * request.getSize())
+                .limit(request.getSize())
+                .map(ReaderMapper::toResponse)
+                .collect(Collectors.toList());
+
+        return new PagedReaderResponse<>(
+                pageContent,
+                request.getPage(),
+                request.getSize(),
+                totalElements
+        );
     }
 
     public ReaderResponse getById(String id) {
-        return toResponse(findOrThrow(id));
+        return ReaderMapper.toResponse(findOrThrow(id));
     }
 
     public ReaderResponse create(ReaderRequest request) {
-        validateRequest(request);
+        ReaderValidator.normalize(request);
+        ReaderValidator.validate(request);
 
-        String id = (request.getId() != null && !request.getId().isBlank())
-                ? request.getId()
-                : IdGenerator.nextReaderId(
-                readerRepository.findAll().stream().map(Reader::getId).toList());
+        String id = resolveId(request);
 
         if (readerRepository.existsById(id)) {
-            throw new BusinessException("Mã bạn đọc đã tồn tại: " + id);
+            log.warn("Từ chối thêm bạn đọc trùng mã: {}", id);
+            throw new DuplicateReaderIdException(id);
         }
 
-        Reader reader = buildReader(id, request);
+        Reader reader = ReaderMapper.toModel(id, request);
         readerRepository.save(reader);
-        return toResponse(reader);
+
+        log.info("Đã thêm bạn đọc mới: {}", id);
+
+        return ReaderMapper.toResponse(reader);
     }
 
     public ReaderResponse update(String id, ReaderRequest request) {
         findOrThrow(id);
-        validateRequest(request);
 
-        Reader updated = buildReader(id, request);
+        ReaderValidator.normalize(request);
+        ReaderValidator.validate(request);
+
+        Reader updated = ReaderMapper.toModel(id, request);
         readerRepository.save(updated);
-        return toResponse(updated);
+
+        log.info("Đã cập nhật bạn đọc: {}", id);
+
+        return ReaderMapper.toResponse(updated);
     }
 
     public void delete(String id) {
@@ -86,36 +113,72 @@ public class ReaderService {
         }
 
         readerRepository.deleteById(id);
+        log.info("Đã xóa bạn đọc: {}", id);
     }
 
-    private void validateRequest(ReaderRequest request) {
-        if (request.getName() == null || request.getName().trim().isEmpty()) {
-            throw new BusinessException("Họ tên không được để trống");
+    private String resolveId(ReaderRequest request) {
+        if (request.getId() != null && !request.getId().isBlank()) {
+            return request.getId();
         }
-        if (request.getPhoneNumber() == null || !request.getPhoneNumber().matches("\\d{9,11}")) {
-            throw new BusinessException("Số điện thoại không hợp lệ");
-        }
-        if (request.getType() == null || !List.of("STUDENT", "PRIORITY_STUDENT", "LECTURER").contains(request.getType())) {
-            throw new BusinessException("Loại bạn đọc không hợp lệ");
-        }
+
+        List<String> existingIds = readerRepository.findAll().stream()
+                .map(Reader::getId)
+                .collect(Collectors.toList());
+
+        return IdGenerator.nextReaderId(existingIds);
     }
 
-    private Reader buildReader(String id, ReaderRequest request) {
-        return switch (request.getType()) {
-            case "STUDENT" -> new StudentReader(id, request.getName(), request.getPhoneNumber());
-            case "PRIORITY_STUDENT" -> new PriorityStudentReader(id, request.getName(), request.getPhoneNumber());
-            case "LECTURER" -> new LecturerReader(id, request.getName(), request.getPhoneNumber());
-            default -> throw new BusinessException("Loại bạn đọc không hợp lệ");
-        };
+    private boolean matchesKeyword(Reader reader, String keyword) {
+        if (keyword == null || keyword.trim().isEmpty()) {
+            return true;
+        }
+
+        String trimmedKeyword = keyword.trim().toLowerCase();
+
+        boolean matchesName =
+                reader.getName().toLowerCase().contains(trimmedKeyword);
+
+        boolean matchesId =
+                reader.getId().equalsIgnoreCase(keyword.trim());
+
+        boolean matchesPhone =
+                reader.getPhoneNumber().contains(trimmedKeyword);
+
+        return matchesName || matchesId || matchesPhone;
+    }
+
+    private boolean matchesType(Reader reader, String type) {
+        if (type == null || type.isBlank()) {
+            return true;
+        }
+
+        return reader.getType().name().equals(type);
+    }
+
+    private Comparator<Reader> buildComparator(
+            String sortBy,
+            String sortDirection
+    ) {
+        Comparator<Reader> comparator = "name".equals(sortBy)
+                ? Comparator.comparing(
+                Reader::getName,
+                String.CASE_INSENSITIVE_ORDER
+        )
+                : Comparator.comparing(Reader::getId);
+
+        return "desc".equals(sortDirection)
+                ? comparator.reversed()
+                : comparator;
     }
 
     private Reader findOrThrow(String id) {
         return readerRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy bạn đọc: " + id));
+                .orElseThrow(() -> new ReaderNotFoundException(id));
     }
-
-    private ReaderResponse toResponse(Reader reader) {
-        return new ReaderResponse(reader.getId(), reader.getName(), reader.getPhoneNumber(),
-                reader.getType().name(), reader.getMaxBorrowLimit());
+    public List<ReaderResponse> getAllForExport() {
+        return readerRepository.findAll().stream()
+                .sorted(Comparator.comparing(Reader::getId))
+                .map(ReaderMapper::toResponse)
+                .collect(Collectors.toList());
     }
 }
